@@ -1,5 +1,11 @@
 2008-10-26  Neal H. Walfield  <neal@gnu.org>
 
+	* src/starling.c (change_caption_format): Change box's child
+	spacing to 0.
+	(starling_run): Likewise.
+
+2008-10-26  Neal H. Walfield  <neal@gnu.org>
+
 	* src/starling.c (lyrics_download): New function.
 	(starling_run): Create "download" button on lyrics tab.  Connect
 	"clicked" signal to it.
